--- a/insights-article-2.html
+++ b/insights-article-2.html
@@ -100,13 +100,13 @@
 <div class="col-12" id="article">
 
                             <div class="col-12 p-0 article-image-container">
-                        <img src="assets/images/insights/article-1/office-hero.png" alt="Burns Scalo Real Estate team members chatting in their open office space">
+                        <img src="assets/images/insights/article-2/ammenities-hero.png" alt="Burns Scalo Real Estate team members chatting in their open office space">
                         </div>
                         <div class="col-12">
-                        <h1 class="col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-1" id="article-title">What You Pay In Rent Doesn't Matter</h1>
+                        <h1 class="col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-3" id="article-title">Workplace amenities are not entitlements</h1>
                       </div>
 
-                      <div class="article-overview-container col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-1">
+                      <div class="article-overview-container col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-3">
                         <p class="stamp col-12">Feb 25, 2021, 12:42pm EST</p>
                         <ul class="col-12">
 
@@ -129,65 +129,61 @@
 <script type="IN/Share" data-url="https://zanehuggins.github.io/Burns-Scalo-6/press-article-1.html"></script>
 -->
 
-                      <article class="col-10 col-md-8 col-xl-6 offset-1 offset-md-1 offset-xl-1">
+                      <article class="col-10 col-md-8 col-xl-6 offset-1 offset-md-1 offset-xl-3">
+
+                        <p class="col-12">
+                        Let’s play a word-association game.
+                      </p>
+
+                      <p class="col-12">
+                        <span class="bold">What word comes to mind when you think about an office full of top-notch amenities?</span>
+                        I’m talking about sit-stand desks, cutting-edge technology, and designer kitchens with Starbucks coffee and ultra-healthy, Top-Chef-quality food. Fitness centers, hotel-like lobbies and concierge services. Ping-pong tables, shuffleboard, retreat rooms, walking trails. Plush collaborative spaces, soothing water features, and maybe even an on-site restaurant or bar.
+                        For some in my generation, these amenities are a tough pill to swallow. Most of us spent many years working for employers that expected us to show up, put our head down and work. So when we see these lifestyle-centric amenities, the word that sometimes comes to mind is “entitlement.”
+                        As someone who spent more than two decades putting his head down and working, let me tell you something that the recent movement toward dynamic office space has taught me: amenities are not entitlements. Employers aren’t investing in them just to be nice to their employees. They’re investing in them because they generate profits.
+                      </p>
 
 
-  <p class="col-12">
-  Think about the last time you went looking for a new house. What were the criteria you considered? Obviously, price factored in — you can’t go looking at multi-million-dollar houses if your budget doesn’t come close to that range. But my guess is that you were like the majority of homebuyers in that, in the end, price was a guiding factor, but it didn’t even make your top 10 list of deciding factors.
-  More likely, you made your choice based on the layout and quality of the home itself, the neighborhood fit, traffic and commute patterns, long-term value, the tax rate, and most importantly, proximity to work, to quality schools, to friends and family, and to restaurants and leisure activities. Why do you suppose that is?
-</p>
-
-<p class="col-12">
-  It’s simple: people choose their houses because they have a direct impact on the quality of their lives. The environment you surround yourself in matters a great deal.
-  Which brings us to the next question: in an era when people are working longer and more flexible hours and the lines between work life and home life are increasingly blurred, why would your criteria for choosing an office space be any different?
-  They shouldn’t be. They certainly aren’t any different for recruits. In situations where a talented prospective employee has a choice between two employers, he/she will choose the one with the better office space 10 times out of 10 — even in situations where the other employer offers a higher salary.
-  And yet, in my experience running Burns Scalo Real Estate (BSRE), I can tell you with confidence that the majority of agents, brokers, consultants, and employers approach their search for office space in exactly the wrong way. When so many other factors like talent acquisition and retention, employee health/wellbeing/productivity, and neighborhood and cultural fit mean so much more, they still think about rent and price per square foot first.
-</p>
+                      <p class="col-12">
+                         To get to the bottom of how this is possible, ask yourself this question: are conveniences entitlements? Of course not. Conveniences are conveniences. They make your life easier, free up your time and energy and allow you to focus on your priorities.
+                        Amenities, themselves conveniences, generate those same three factors for employees. This in turn benefits the employer in three ways: 1) amenities help recruit and retain top talent, 2) they foster higher levels of productivity, and 3) they attract new customers or clients.
+                      </p>
 
 
-  <h6 class="col-12">Here’s the order that most employers place their criteria: </h6>
+                      <h6 class="col-12">Recruitment and retention</h6>
+
+                        <p class="col-12">
+                        You might be familiar with the recruiting or retention advantages at play already. I have covered that topic myself. The word is out to the point where whole cities are turning to this strategy to attract and keep top talent.
+                        The question is, why?
+                        For recruiting, if the choice comes down to an employer who can offer a suite of amenities and services that make your work and personal life easier and more convenient versus an employer who offers only a desk, a computer, and a salary, you’re going to choose the employer with the amenities every time.
+                      </p>
+
+                      <p class="col-12">
+                        On the retention front, a broad array of amenities can enhance employee loyalty — loyalty that only builds over time, even in a market where job-hopping is happening at unprecedented rates. You might start your time at the company appreciating the iPhone and fitness center. Eventually, the easy-access daycare and flexible schedule will prove invaluable. Someday, the healthcare and 401(k) matching will be top of mind. And no matter where you are in life, you are certainly going to appreciate the gourmet coffee, complimentary snacks, and concierge service.
+                        When you have your needs met, you are more content, and when you are more content, you are more likely to remain in your job.
+                      </p>
 
 
-<ol class="col-12">
+                      <h6 class="col-12">Productivity</h6>
 
-  <li>Rent (or price) </li>
-  <li>Total space </li>
-  <li>Track record of the landlord </li>
-  <li>Location </li>
-  <li>Age of building </li>
-  <li>Mechanical systems </li>
-  <li>Technology </li>
-  <li>Amenities </li>
-  <li>Wellness and sustainability </li>
-  <li>1Employee recruitment/retention</li>
-</ol>
+                        <p class="col-12">
+                        Healthier environments lead to better, smarter, more innovative work. This is in part because happy people work harder and in part because people value employers who put them into a great space.
+                        Exercise increases energy and focus, but people also tend to work better when they are comfortable and stimulated by their environments. If you feel the same comfort and variability at work as you do at home, you will be more productive.
+                        Better, healthier, and free food in the office reduces the need to drive offsite for lunch, which cuts down on time spent away. If there is a fitness and daycare center at/near the office, people will feel less compelled to leave early for the gym or to pick up their kids from daycare.
+                        Then there are the cultural benefits. That ping-pong table might seem like a distraction, but it provides opportunities for people to bond over shared experience and a sense of belonging to their employer. People who like each other work more efficiently together. Better friendships lead to higher morale, more cohesive culture, and heightened productivity across the board.
+                      </p>
 
-<p class="col-12">
-  Now, some of those criteria are in the right place. Space and location matter. And no one wants a bad landlord or building with underperforming mechanical systems and outdated technology. But I’m here to tell you that the bottom three — amenities, wellness and sustainability, and employee recruitment and retention — should be much closer to the top, while rent belongs on the bottom.
-  There are a few reasons for this. First, there is the message your office space sends to your employees. I’ve asked this before and I’ll ask it again: do you think your employees care about what you pay in rent? Absolutely not. But do you think they care about how the office you put them in makes them feel about their day-to-day work life? Yes. Absolutely. In fact, there is no better way to improve employee morale and culture than putting your people in a space they love.
-  Second, there are the productivity factors. If your employees have access to exercise, quality food, the outdoors, opportunities to socialize, and services that make their lives easier, then they don’t have to leave the office as often in search of these things. When people are happier, healthier, and actually present in the office, they work harder, and when they work harder, your bottom line improves drastically.
-  Third, we have to consider efficiency. New data-collection capabilities allow the design of more efficient layouts for contemporary office environments, allowing you to streamline your space requirements by 10% to 20%. What this means is that you can rent a smaller, higher quality space and expect the same efficiency as you would receive in a lower cost, lower quality, larger space.
-  Rent is a small percentage of a small line item
-</p>
 
-<p class="col-12">
-  Finally, there is the matter of where your rent resides on the spectrum of expenses in your overall operating budget. For almost every company in every industry, rent is a small percentage of that budget. Our data at BSRE places the range between 5% and 7%. Meanwhile, the cost of your employees in terms of salary and benefits is almost certainly the highest percentage of your overall operating budget (where data suggests a range between 40% and 60%). So why base your office space decision on an expense that is essentially a drop in the bucket compared to your biggest expense — especially since study after study shows that better office space leads to happier, more productive employees?
-  If you make a small increase in the rent you pay — let’s say you go from 5% to 6% of your overall operating budget — you can expect that increase to reflect directly in an improvement in productivity. Make one small change to one of your lowest expenses and you can expect an enormous improvement in the return you receive on your payroll expense.
-</p>
+                      <h6 class="col-12">The bottom line</h6>
 
-<p class="col-12">
-  Don’t make your choice based first on the rent bill; make it based on how your people will respond to the space you choose for them. Yes, business is about making money, and the rent bill plays a factor in that equation, but if it’s the difference between improving the bottom line and doing the right thing for your people, why not do both? Stop thinking about cost per square foot. Your rent doesn’t matter. Your people are what matter. Give them more of what they want and you will get more of what you want in return. Do this, and no one will complain about the space costing too much. They will be too busy enjoying the enormous return from more productive people who enjoy working together and delivering an exceptional work product to their employer.
-</p>
+                        <p class="col-12">
+                        Clients, customers, and prospects value amenities every bit as much as employees. A stale, outdated office space with zero amenities leaves one impression, while a dynamic environment full of amenities and happy, healthy, dedicated people leaves another impression entirely.
+                        Imagine the sales effect of an office that compels people to say “wow” the moment they walk through the door. Imagine the branding effect of a space that projects luxury and class to everyone who visits. Imagine the home court advantage you gain when your office is so inviting and engaging that everyone you do business with would prefer to travel to you instead of the other way around.
+                        Amenities are not entitlements. They are an incredible advantage in the talent war, a high-powered motivator of productivity, and an exciting new means to drive profit.
+                      </p>
+
                       </article>
 
-                      <aside class="col-12 col-md-3 col-xl-5">
-                        <img src="assets/images/insights/article-1/office-1.png" alt="#" class="col-12 col-xl-8 offset-xl-2">
-                        <img src="assets/images/insights/article-1/office-2.png" alt="#" class="col-12 col-xl-8 offset-xl-2">
-                        <img src="assets/images/insights/article-1/office-3.png" alt="#" class="col-12 col-xl-8 offset-xl-2">
-                        <img src="assets/images/insights/article-1/office-4.png" alt="#" class="col-12 col-xl-8 offset-xl-2">
-                        <img src="assets/images/insights/article-1/office-5.png" alt="#" class="col-12 col-xl-8 offset-xl-2">
-                        <img src="assets/images/insights/article-1/office-6.png" alt="#" class="col-12 col-xl-8 offset-xl-2">
-                      </aside>
+
 
 
 
