--- a/insights-article-3.html
+++ b/insights-article-3.html
@@ -100,13 +100,13 @@
 <div class="col-12" id="article">
 
                             <div class="col-12 p-0 article-image-container">
-                        <img src="assets/images/insights/article-1/office-hero.png" alt="Burns Scalo Real Estate team members chatting in their open office space">
+                        <img src="assets/images/insights/article-2/ammenities-hero.png" alt="Burns Scalo Real Estate team members chatting in their open office space">
                         </div>
                         <div class="col-12">
-                        <h1 class="col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-1" id="article-title">What You Pay In Rent Doesn't Matter</h1>
+                        <h1 class="col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-3" id="article-title">Workplace amenities are not entitlements</h1>
                       </div>
 
-                      <div class="article-overview-container col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-1">
+                      <div class="article-overview-container col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-3">
                         <p class="stamp col-12">Feb 25, 2021, 12:42pm EST</p>
                         <ul class="col-12">
 
@@ -129,65 +129,43 @@
 <script type="IN/Share" data-url="https://zanehuggins.github.io/Burns-Scalo-6/press-article-1.html"></script>
 -->
 
-                      <article class="col-10 col-md-8 col-xl-6 offset-1 offset-md-1 offset-xl-1">
+                      <article class="col-10 col-md-8 col-xl-6 offset-1 offset-md-1 offset-xl-3">
+
+                        <p class="col-12">
+                        Lately, companies from just about every industry are starting to recognize the incredible competitive advantage that is dynamic office space.
+                      </p>
+
+                       <p class="col-12">
+                        When you think about a modern office space packed with amenities and services, the companies that most likely come to mind include Google, Apple, and Facebook. There is good reason for this: for years, technology companies have led the movement. They were the first to see the built-in advantages of dynamic office space. In a hypercompetitive industry where top-end talent can make all the difference, having a space that makes recruits say “wow” certainly has its benefits.
+                       Then there is the matter of productivity. In an industry like technology, where change often has to occur at incredible speeds, it is important to put your hardworking employees in a space where they are comfortable and feel like their needs outside of work have been met. The happier and healthier they are, the more focused they become on work. These big tech companies have made considerable investments in promoting the health and wellness of their employees simply because doing so leads to improved productivity and performance.
+                     </p>
+
+                       <p class="col-12">
+                        Further, by locating their companies in city centers or near major universities, technology companies enjoy greater access to a large pool of exactly the kind of talent they need to thrive. Allowing these talented people to live and work in walkable neighborhoods full of people of similar careers and interests helps engender greater loyalty to their employers, as well.
+                      </p>
 
 
-  <p class="col-12">
-  Think about the last time you went looking for a new house. What were the criteria you considered? Obviously, price factored in — you can’t go looking at multi-million-dollar houses if your budget doesn’t come close to that range. But my guess is that you were like the majority of homebuyers in that, in the end, price was a guiding factor, but it didn’t even make your top 10 list of deciding factors.
-  More likely, you made your choice based on the layout and quality of the home itself, the neighborhood fit, traffic and commute patterns, long-term value, the tax rate, and most importantly, proximity to work, to quality schools, to friends and family, and to restaurants and leisure activities. Why do you suppose that is?
+                      <h6 class="col-12">A bright future for all</h6>
+                      <p class="col-12">
+                       Just because Big Tech started this movement, that doesn’t mean they are the only ones who can benefit from it. Lately, companies from just about every industry are starting to recognize the incredible competitive advantage that is dynamic office space. Reebok recently moved to Boston, where they renovated a beautiful building into a state-of-the-art space to serve as its headquarters. The new location features all the fitness-related bells and whistles you might expect from a sports apparel company — a massive fitness center that offers spin classes, dance classes, and even boxing lessons. But it also boasts unassigned workspaces, collaborative areas, and plenty of opportunities for employees to share insight between teams that wouldn’t otherwise be directly connected in the production process.
+                     </p>
+
+                        <p class="col-12">
+                       Meanwhile, McDonalds’ new headquarters in Chicago aligns its employees into “work neighborhoods,” with open floor plans and flexible spaces that allow their staff to choose an environment where they can be most productive at any given time of day. Their employee cafe offers barista-style coffee, free pastries, a technology bar, and stadium seating. Its hundreds of conference rooms and cafe-style workspaces feature state-of-the-art technology that helps spur collaboration and innovation. Its fitness center and outdoor terraces with views of the city are world class.
+                       Hilton, recently named as Fortune’s best company to work for, dedicated a full year and plenty of budget to convert the first floor of its headquarters into a 10,000-square-foot coworking space that includes a cafeteria, a full-service concierge desk, an outdoor terrace, and a Starbucks.
+                       The result for all three of these companies is that face-to-face interaction among employees has improved, innovation happens more frequently, and productivity is soaring. All of these facts they owe to an effort to improve their employees’ sense of work-life blend. By helping them meet more of their needs at work, they ensure a greater sense of wellbeing, which only enhances focus and dedication. Further, the top minds at each of these companies have everything they need to remain stimulated, creative, inspired, invested, and working hard.
+                     </p>
+
+
+                    <h6 class="col-12">You don’t need to be a tech company to enjoy the same benefits</h6>
+                    <p class="col-12">
+                       Why on Earth would you need to be a technology company to enjoy these benefits? No matter what your company does or who leads you, works for you, or will one day work for you, it will benefit from putting its people into an environment that makes them happier, more stimulated, and more focused on collaborative, innovative work. With rents in a high-end space only nominally higher than in an average space — and with rent being such a small drop in the bucket that is a company’s operating budget — the cost for these advantages is essentially a nonfactor, as well.
+                       In your own market, if one of your competitors isn’t already occupying a dynamic office or following the nearly half of corporations who are experimenting with some form of coworking space, then they will be soon. The world’s most successful technology companies — and lately, the world’s most successful companies, period — have shined the light on this remarkable competitive advantage. Being the first to take this same leap in your own market could lead to similar growth for your company.
 </p>
 
-<p class="col-12">
-  It’s simple: people choose their houses because they have a direct impact on the quality of their lives. The environment you surround yourself in matters a great deal.
-  Which brings us to the next question: in an era when people are working longer and more flexible hours and the lines between work life and home life are increasingly blurred, why would your criteria for choosing an office space be any different?
-  They shouldn’t be. They certainly aren’t any different for recruits. In situations where a talented prospective employee has a choice between two employers, he/she will choose the one with the better office space 10 times out of 10 — even in situations where the other employer offers a higher salary.
-  And yet, in my experience running Burns Scalo Real Estate (BSRE), I can tell you with confidence that the majority of agents, brokers, consultants, and employers approach their search for office space in exactly the wrong way. When so many other factors like talent acquisition and retention, employee health/wellbeing/productivity, and neighborhood and cultural fit mean so much more, they still think about rent and price per square foot first.
-</p>
-
-
-  <h6 class="col-12">Here’s the order that most employers place their criteria: </h6>
-
-
-<ol class="col-12">
-
-  <li>Rent (or price) </li>
-  <li>Total space </li>
-  <li>Track record of the landlord </li>
-  <li>Location </li>
-  <li>Age of building </li>
-  <li>Mechanical systems </li>
-  <li>Technology </li>
-  <li>Amenities </li>
-  <li>Wellness and sustainability </li>
-  <li>1Employee recruitment/retention</li>
-</ol>
-
-<p class="col-12">
-  Now, some of those criteria are in the right place. Space and location matter. And no one wants a bad landlord or building with underperforming mechanical systems and outdated technology. But I’m here to tell you that the bottom three — amenities, wellness and sustainability, and employee recruitment and retention — should be much closer to the top, while rent belongs on the bottom.
-  There are a few reasons for this. First, there is the message your office space sends to your employees. I’ve asked this before and I’ll ask it again: do you think your employees care about what you pay in rent? Absolutely not. But do you think they care about how the office you put them in makes them feel about their day-to-day work life? Yes. Absolutely. In fact, there is no better way to improve employee morale and culture than putting your people in a space they love.
-  Second, there are the productivity factors. If your employees have access to exercise, quality food, the outdoors, opportunities to socialize, and services that make their lives easier, then they don’t have to leave the office as often in search of these things. When people are happier, healthier, and actually present in the office, they work harder, and when they work harder, your bottom line improves drastically.
-  Third, we have to consider efficiency. New data-collection capabilities allow the design of more efficient layouts for contemporary office environments, allowing you to streamline your space requirements by 10% to 20%. What this means is that you can rent a smaller, higher quality space and expect the same efficiency as you would receive in a lower cost, lower quality, larger space.
-  Rent is a small percentage of a small line item
-</p>
-
-<p class="col-12">
-  Finally, there is the matter of where your rent resides on the spectrum of expenses in your overall operating budget. For almost every company in every industry, rent is a small percentage of that budget. Our data at BSRE places the range between 5% and 7%. Meanwhile, the cost of your employees in terms of salary and benefits is almost certainly the highest percentage of your overall operating budget (where data suggests a range between 40% and 60%). So why base your office space decision on an expense that is essentially a drop in the bucket compared to your biggest expense — especially since study after study shows that better office space leads to happier, more productive employees?
-  If you make a small increase in the rent you pay — let’s say you go from 5% to 6% of your overall operating budget — you can expect that increase to reflect directly in an improvement in productivity. Make one small change to one of your lowest expenses and you can expect an enormous improvement in the return you receive on your payroll expense.
-</p>
-
-<p class="col-12">
-  Don’t make your choice based first on the rent bill; make it based on how your people will respond to the space you choose for them. Yes, business is about making money, and the rent bill plays a factor in that equation, but if it’s the difference between improving the bottom line and doing the right thing for your people, why not do both? Stop thinking about cost per square foot. Your rent doesn’t matter. Your people are what matter. Give them more of what they want and you will get more of what you want in return. Do this, and no one will complain about the space costing too much. They will be too busy enjoying the enormous return from more productive people who enjoy working together and delivering an exceptional work product to their employer.
-</p>
                       </article>
 
-                      <aside class="col-12 col-md-3 col-xl-5">
-                        <img src="assets/images/insights/article-1/office-1.png" alt="#" class="col-12 col-xl-8 offset-xl-2">
-                        <img src="assets/images/insights/article-1/office-2.png" alt="#" class="col-12 col-xl-8 offset-xl-2">
-                        <img src="assets/images/insights/article-1/office-3.png" alt="#" class="col-12 col-xl-8 offset-xl-2">
-                        <img src="assets/images/insights/article-1/office-4.png" alt="#" class="col-12 col-xl-8 offset-xl-2">
-                        <img src="assets/images/insights/article-1/office-5.png" alt="#" class="col-12 col-xl-8 offset-xl-2">
-                        <img src="assets/images/insights/article-1/office-6.png" alt="#" class="col-12 col-xl-8 offset-xl-2">
-                      </aside>
+
 
 
 
