--- a/insights.html
+++ b/insights.html
@@ -110,10 +110,10 @@
               <div class="portfolio-list col-12 float-left">
                 <a href="insights-article-1.html">
                   <div class="col-12 p-0 portfolio-image-container">
-              <img src="assets/images/portfolio/visionedit.png" alt="#">
+              <img src="assets/images/insights/article-1/office-cover.png" alt="#">
               </div>
-            <h3>What You Pay In Rent Doesn't Matter</h3>
-            <p>Feb 25, 2021, 12:42pm EST | Pittsburgh Business Times</p>
+            <h3>What you pay in rent doesn't matter</h3>
+            <p>Feb 25, 2021, 12:42pm EST</p>
             </a>
             </div>
           </li>
@@ -121,24 +121,24 @@
 
             <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-bentley.html">
+              <a href="insights-article-2.html">
                 <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/press/jim.png" alt="#">
+            <img src="assets/images/insights/article-2/ammenities-cover.png" alt="#">
             </div>
-            <h3>Scalo's Viewpoint: The forces Covid can't stop</h3>
-            <p>Feb 3, 2021, 7:54am EST | Jim Scalo</p>
+            <h3>Workplace amenities are not entitlements</h3>
+            <p>Feb 3, 2021, 7:54am EST</p>
             </a>
             </div>
           </li>
 
             <li class="west mix container-p col-12 col-md-4 col-lg-4 float-left">
             <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-boardwalk.html">
+              <a href="insights-article-3.html">
                 <div class="col-12 p-0 portfolio-image-container">
             <img src="assets/images/press/diamond-ridge.png" alt="#">
             </div>
-            <h3>Burns Scalo buys former KMart site in Moon from Chevron to add to Diamond Ridge plan</h3>
-            <p>Dec 30, 2020, 2:02pm EST | Tim Schooley</p>
+            <h3> Why let big technology companies have all the fun?</h3>
+            <p>Dec 30, 2020, 2:02pm EST</p>
             </a>
             </div>
           </li>
