--- a/team-brokerage.html
+++ b/team-brokerage.html
@@ -315,9 +315,9 @@
 
     <div class="container-p col-12 col-md-4 col-xl-3 float-left">
       <div class="portfolio-list col-12 float-left">
-    <img src="assets/images/team/brokerage/lia.png" alt="professional headshot of Lia Chappel" class="col-12">
+    <img src="assets/images/team/brokerage/lia.png" alt="professional headshot of Lia Chappell" class="col-12">
       <div class="name-container">
-    <h4>Lia Chappel</h4>
+    <h4>Lia Chappell</h4>
     <h5>Marketing Coordinator</h5>
   </div>
 
