--- a/team.html
+++ b/team.html
@@ -96,7 +96,7 @@
 
 
 
-<section class="featured-projects col-10 col-md-10 offset-1" id="leadership">
+<div class="featured-projects col-10 col-md-10 offset-1" id="leadership">
 
   <p class="small-headline col-6">
   LEADERSHIP
@@ -253,7 +253,7 @@
 </div>
 
 
-</section>
+</div>
 
 
 
