--- a/team.html
+++ b/team.html
@@ -96,7 +96,7 @@
 
 
 
-<div class="featured-projects col-10 col-md-10 offset-1" id="leadership">
+<div class="featured-projects col-10 col-md-10 offset-1 leadership-container-padding" id="leadership">
 
   <p class="small-headline col-6">
   LEADERSHIP
