--- a/insights.html
+++ b/insights.html
@@ -106,6 +106,19 @@
 
             <ul class="containMix portfolio-container col-12 col-md-10 offset-md-1 float-left" id="press">
 
+              <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
+                <div class="portfolio-list col-12 float-left">
+                  <a href="insights-article-0.html">
+                    <div class="col-12 p-0 portfolio-image-container">
+                <img src="assets/images/insights/article-0/diamond-ridge.png" alt="#">
+                </div>
+              <h3>New Office Wins (NOW)</h3>
+              <p>Feb 25, 2021, 12:42pm EST</p>
+              </a>
+              </div>
+            </li>
+
+
             <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
               <div class="portfolio-list col-12 float-left">
                 <a href="insights-article-1.html">
@@ -146,78 +159,6 @@
 
 
 
-            <li class="west current mix container-p col-12 col-md-4 col-lg-4 float-left">
-            <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-diamond-ridge.html">
-                <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/press/bsb.png" alt="#">
-            </div>
-            <h3>Burns Scalo doubles investment on Riviera office project and lands another life sciences firm</h3>
-            <p>Dec 29, 2020, 11:05am EST | Tim Schooley</p>
-            </a>
-            </div>
-          </li>
-
-            <li class="south current mix container-p col-12 col-md-4 col-lg-4 float-left">
-            <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-piazza.html">
-                <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/press/biotech.png" alt="#">
-            </div>
-            <h3>Burns Scalo lands publicly traded biotech firm for Riviera in South Oakland</h3>
-            <p>Oct 14, 2020, 2:59pm EDT | Tim Schooley</p>
-            </a>
-            </div>
-          </li>
-
-            <li class="east mix current container-p col-12 col-md-4 col-lg-4 float-left">
-            <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-riviera.html">
-                <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/press/management.png" alt="#">
-            </div>
-            <h3>Largest Pittsburgh-area Commercial Property Managers</h3>
-            <p> Jan 01, 2021, 6:00am EST | Pittsburgh Business Times</p>
-            </a>
-            </div>
-          </li>
-
-            <li class="central current mix container-p col-12 col-md-4 col-lg-4 float-left">
-            <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-vision.html">
-                <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/press/bentley.png" alt="#">
-            </div>
-            <h3>Best Places to Work in Western Pennsylvania, Large category</h3>
-            <p>Dec 05, 2020, 7:03pm EST| Pittsburgh Business Times</p>
-            </a>
-            </div>
-          </li>
-
-            <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
-            <div class="portfolio-list col-12 float-left">
-              <a href="portfolio-zenith.html">
-                <div class="col-12 p-0 portfolio-image-container">
-            <img src="assets/images/press/future.png" alt="#">
-            </div>
-            <h3>Developers work to 'future proof' their projects for a very different world after Covid-19</h3>
-            <p>May 1, 2020, 2:57pm EDT | Tim Schooley</p>
-            </a>
-            </div>
-          </li>
-
-
-          <li class="south mix container-p col-12 col-md-4 col-lg-4 float-left">
-          <div class="portfolio-list col-12 float-left">
-            <a href="portfolio-zenith.html">
-              <div class="col-12 p-0 portfolio-image-container">
-          <img src="assets/images/press/cbre.png" alt="#">
-          </div>
-          <h3>CBRE ranks Pittsburgh as top emerging market for life sciences based on fast-growing R&D employment</h3>
-          <p>Oct 16, 2020, 8:20am EDT | Tim Schooley</p>
-          </a>
-          </div>
-        </li>
 
 
 
