--- a/email-disclaimer.html
+++ b/email-disclaimer.html
@@ -43,10 +43,12 @@
       </header>
 
 
+
+
       <nav class="col-12 col-lg-10 col-xl-9 offset-lg-2 offset-xl-3" id="nav">
         <ul class="main-nav col-8 col-md-5 col-lg-6 col-xl-6 offset-2 offset-md-4 offset-lg-2 offset-xl-2">
 
-          <li class="nav-item-1 d-none d-xl-block"><a href="who-we-are.html">WHO WE ARE</a>
+          <li class="nav-item-1 d-none d-xl-block" id="active"><a href="who-we-are.html">WHO WE ARE</a>
             <ul id="subNav1">
             <li><a href="team.html">TEAM</a></li>
             <li class="sub-2"><a href="press.html">PRESS</a></li>
@@ -95,125 +97,31 @@
           </nav>
 
 
+<div class="col-12" id="article">
+
+
+                        <div class="col-12">
+                        <h1 class="d-none col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-3" id="article-title">PRIVACY POLICY</h1>
+                      </div>
 
 
 
+                      <article class="col-10 col-md-8 col-xl-6 offset-1 offset-md-2 offset-xl-3">
 
-<div class="scroll-container col-12 p-0">
-      <section class="col-12" id="container-1">
-        <span class="top"></span>
+<h6 class="col-12">
+                        BURNS & SCALO REAL ESTATE SERVICES, EMAIL DISCLAIMER
+                      </h6>
 
-        <video muted autoplay playsinline class="video-background d-none d-lg-block" id="home-hero">
-<source src="assets/videos/home-desktop.mp4" type="video/mp4">
-<source src="movie.ogg" type="video/ogg">
-Your browser does not support the video tag.
-</video>
-
-<div class="video-background d-lg-none">
-<img src="assets/images/home-background.png" alt="#">
-</div>
-
-<h1 class="col-10 offset-1"><span class="delay-1">Shaping</span><br><span class="delay-2">spaces</span> <span class="delay-3">that</span><br><span class="green-underline delay-4">shape lives</span></h1>
-        </section>
-
-
-
-<section class="section second col-12" id="container-2">
-<span class="top"></span>
-
-
-
-
-
-  <h2 class="is-animated col-10 col-md-8 col-lg-4 col-xl-5 offset-1 offset-md-2 offset-xl-0">ELEVATED
-<br>
-<span class="green-underline">EXPERIENCE</span></h2>
-
-<div class="copy-container col-12 col-lg-8 col-xl-6 offset-lg-2 offset-xl-0">
-<p class="col-10 col-md-8 col-lg-12 col-xl-10 offset-1 offset-md-2 offset-lg-0 ">
-We create spaces that people want to come to, not just have to. Dynamic spaces that not only attract today’s brightest talent but also spark motivation, innovation, happiness, and loyalty for years to come. Giving them more of the things they love, and giving you peace of mind.
-</p>
-  </div>
-
-<div class="link-container col-10 col-md-8 col-xl-5 offset-1 offset-md-2 offset-xl-5">
-  <a href="who-we-are.html" class="link-outline-2 col-12"><p class="col-10">WHO IS BURNS SCALO REAL ESTATE</p>
-  <img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
-  </a>
-
-  <a href="what-we-do.html" class="col-12 border-bottom link-outline-2"><p class="col-10">WHAT IS LUXURY REAL ESTATE</p>
-<img src="assets/arrow.svg" alt="arrow pointing right" class="col-2">
-    </a>
-</div>
-
-</section>
-
-
-
-<section class="col-12 p-0 d-none d-xl-block">
-<embed class="col-12 p-0" src="push-1.html" id="cover-1">
-</section>
-
-
-<section class="col-12 p-0 d-xl-none" id="push-1-pt2-mobile">
-  <img src="assets/images/push-1.png" alt="#" class="col-12">
-<div class="col-10 col-md-8 offset-1 offset-md-2">
-  <h2 class="col-12">
-PUTTING<br><span class="turquoise-underline">PEOPLE FIRST</span>
-    </h2>
-
-    <p class="col-12">
-Our approach is informed by human values—namely, a desire for health and happiness—and adheres to the principle that the workplace creates a framework for life. Keeping people’s minds fresh and sharp, while providing them with a stimulating stage to play out their lives.
-  </p>
-</div>
-
-
-
-
-</section>
-
-
-<section class="featured-projects col-12 col-lg-10 offset-lg-1" id="featured-projects">
-
-<p class="small-headline col-10 offset-2 offset-lg-0">
-FEATURED PROPERTIES
+<p class="col-12">
+The information contained in or attached to this email is intended only for the use of the addressee. If you are not the intended recipient of this email, you are strictly prohibited from disclosing, copying, distributing, or retaining this email or any part of it. It may contain information which is confidential and/or covered by legal, professional or other privilege under applicable law. If you have received this email in error, please notify us immediately by return email, and delete and destroy all copies of this email. The views expressed in this email are not necessarily the views of Burns Scalo or its officers, directors, partners, members or managers, and they make no representation, nor accept any liability regarding its accuracy or completeness. Nothing contained in this email is intended to constitute an electronic signature, unless a specific statement to the contrary is included in this message
 </p>
 
-<div class="container-p col-8 col-md-6 col-lg-4 offset-2 offset-md-3 offset-lg-0 float-left">
-  <div class="portfolio-list col-12 float-left">
-    <a href="portfolio-riviera.html">
-      <div class="col-12 p-0 portfolio-image-container">
-  <img src="assets/images/portfolio/riviera.png" alt="Outside view of the Riviera property.">
-  </div>
-<h3>THE RIVIERA</h3>
-</a>
-</div>
-</div>
+                      </article>
 
 
-<div class="container-p col-8 col-md-6 col-lg-4 offset-2 offset-md-3 offset-lg-0 float-left">
-<div class="portfolio-list col-12 float-left">
-  <a href="#">
-    <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/visionedit.png" alt="Outside view of the Vision property.">
-</div>
-<h3>THE VISION</h3>
-</a>
-</div>
-</div>
 
-<div class="container-p col-8 col-md-6 col-lg-4 offset-2 offset-md-3 offset-lg-0 float-left">
-<div class="portfolio-list col-12 float-left">
-  <a href="#">
-    <div class="col-12 p-0 portfolio-image-container">
-<img src="assets/images/portfolio/diamond.png" alt="Digital rendering of the Diamond Ridge property exterior">
-</div>
-<h3>DIAMOND RIDGE</h3>
-</a>
-</div>
-</div>
+</div><!-- CLOSES #ARTICLE CONTAINER -->
 
-
-</section>
 
 
 <footer class="col-12 d-none d-xl-block">
@@ -254,71 +162,89 @@ FEATURED PROPERTIES
           </footer>
         </section>
 
-        </div><!-- CLOSES SCROLL CONTAINER -->
 
-<!-- DROPDOWN MENU SCRIPT
-<script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          <!-- DROPDOWN MENU SCRIPT
+          <script>
+                    function myFunction() {
+            var x = document.getElementById("nav");
+            if (x.style.display === "block") {
+              x.style.display = "none";
+            } else {
+              x.style.display = "block";
+            }
+          }
+          </script>
+          -->
+
+
+
+
+
+          <script>
           function myFunction() {
-  var x = document.getElementById("nav");
-  if (x.style.display === "block") {
-    x.style.display = "none";
-  } else {
-    x.style.display = "block";
-  }
-}
-</script>
--->
+             var element = document.getElementById("nav");
+             element.classList.toggle("display-toggle");
+          }
+          </script>
 
 
+          <script>
+          function subNav() {
+             var element = document.getElementById("subNavMobile");
+             element.classList.toggle("display-toggle-subnav");
+          }
+          </script>
 
+          <script>
+          function subNav1() {
+             var element = document.getElementById("subNavMobile1");
+             element.classList.toggle("display-toggle-subnav1");
+          }
+          </script>
+          <!--
 
+          <script>
+          function subNav() {
+            var x = document.getElementById("subNavMobile");
+            if (x.style.display === "none") {
+              x.style.display = "block";
+            } else {
+              x.style.display = "none";
+            }
+          }
+          </script>
+          -->
 
-<script>
-function myFunction() {
-   var element = document.getElementById("nav");
-   element.classList.toggle("display-toggle");
-}
-</script>
+          <!-- END DROPDOWN MENU SCRIPT -->
 
+              <!-- Optional JavaScript; choose one of the two! -->
 
-<script>
-function subNav() {
-   var element = document.getElementById("subNavMobile");
-   element.classList.toggle("display-toggle-subnav");
-}
-</script>
+              <!-- Option 1: Bootstrap Bundle with Popper -->
+              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
-<script>
-function subNav1() {
-   var element = document.getElementById("subNavMobile1");
-   element.classList.toggle("display-toggle-subnav1");
-}
-</script>
-<!--
-
-<script>
-function subNav() {
-  var x = document.getElementById("subNavMobile");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
-</script>
--->
-
-<!-- END DROPDOWN MENU SCRIPT -->
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-    -->
-  </body>
-</html>
+              <!-- Option 2: Separate Popper and Bootstrap JS -->
+              <!--
+              <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+              <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+              -->
+            </body>
+          </html>
